Refactor: Report page
